# lexer

./: .gitignore  Cargo.toml  flake.nix  readme.md  rust-toolchain.toml
.cargo/: config.toml
backtracking/: Cargo.toml
backtracking/benches/: bench.rs
backtracking/src/: lib.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: state_machine.rs
pattern/: Cargo.toml
pattern/src/: derive.rs  lib.rs  main.rs
pattern_macros/: Cargo.toml
pattern_macros/src/: dict.rs  lib.rs  trie.rs
recursive_descent/: Cargo.toml
recursive_descent/benches/: bench.rs
recursive_descent/src/: lib.rs  main.rs
src/: lib.rs  main.rs
state_machine/: Cargo.toml
state_machine/benches/: bench.rs
state_machine/src/: derive.rs  lib.rs  main.rs
state_machine_macros/: Cargo.toml
state_machine_macros/src/: dict.rs  lexer.rs  lib.rs  parse_tree.rs  parser.rs  trie.rs
utf8_reader/: Cargo.toml
utf8_reader/src/: lib.rs
