[workspace]
resolver = "2"
members = [
  "backtracking",
  "common",
  "pattern",
  "pattern_macros",
  "recursive_descent",
  "state_machine",
  "state_machine_macros",
  "utf8_reader",
]

[workspace.dependencies]
anyhow = "1.0"
common = { path = "common" }
criterion = { version = "0.5", features = ["html_reports"] }
console = "0.15"
pattern_macros = { path = "pattern_macros" }
proc-macro2 = "1.0"
quote = "1.0"
state_machine_macros = { path = "state_machine_macros" }
syn = "2.0"
thiserror = "1.0"
utf8_reader = { path = "utf8_reader" }
