[package]
name = "recursive_descent"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
common.workspace = true
criterion.workspace = true

[dependencies]
anyhow.workspace = true
common.workspace = true
console.workspace = true
thiserror.workspace = true
utf8_reader.workspace = true
